- Add a new profile to setup a cas auth plugin for the ianus portal. [elioschmutz]
- Fix encoding issue in query-source `query` parameter. [deiferni]
- Do no longer send activity mails from the current user due to spam issues when the user's email address does not match the portal domain. [elioschmutz]
- OfficeOnline: Use collaborative checkout / checkins. [lgraf]
- Add list workspaces action for new frontend. [njohner]
- Add additional fields to @user-listing endpoint. [njohner]
- Add ogds user listing via @user-listing endpoint. [deiferni]
- Add ogds team listing via @team-listing endpoint. [deiferni]


2020.2.0rc1 (2020-03-11)
------------------------

- Extend the @config endpoint with an `apps_url` attribute. [elioschmutz]
- Extend policytemplates to use the single thread setup. [elioschmutz]
- Extend policytemplates with workspace deployment. [elioschmutz]
- Extend policytemplates with gever-ui activation. [elioschmutz]
- Add API service to create document from template. [deiferni]
- Restrict `geverui` cookie to admin unit. [elioschmutz]
- Extend the opengever deployment directive with workspace roles. [elioschmutz]
- Add API endpoint to copy documents from a workspace. [njohner]
- Add API endpoint to list documents in linked workspace. [njohner]
- Allow copying mails to linked workspace. [njohner]
- Set seen_tours for all users in test fixture. [njohner]
- Add support for Office Online aka WOPI. [buchi]


2020.1.0 (2020-02-26)
---------------------

- Add smoke tests for rewrite rules and VHost configs. [lgraf]
- Add container title to task activities. [njohner]
- Set document_date and changed in bundle factory. [njohner]
- Handle changed and modified in ogg bundles. [njohner]
- Allow Administrators to add new keywords. [njohner]
- Implement @copy-document-to-workspace endpoint. [elioschmutz]
- Assign correct role Reader to reader_group. [deiferni]
- Allow administrators to deactivate dossiers. [njohner]